--- a/crm-frontend/src/App.scss
+++ b/crm-frontend/src/App.scss
@@ -17,14 +17,16 @@ body{
   .dashboard-container{
     height: 100vh;
     display: flex;
-    justify-content: space-evenly;
+    flex-direction:column;
+    justify-content:end;
+margin-top:-1em;
     width: 100%;
-    align-items: end;
     .row{
       width: 100%;
       justify-content: space-around;
       flex-wrap: wrap;
-
+      height: 40vh;
+      align-items: center;
       .custom-box {
         min-width: 20%;
         padding: 50px;
@@ -144,13 +146,13 @@ body{
       transition-duration: 500ms;
       transition-timing-function: ease-in-out;
     }
-    .p-sidebar.p-component.p-sidebar-left.p-sidebar-active{
-      position: relative;
+    .p-sidebar.p-component.p-sidebar-left{
+      position: fixed;
       float: left;
       width: 15rem;
       padding: 0;
       height: 100vh;
-      top: -15px;
+      top: 50px !important;
     }
     .nav-item.dropdown{
       a{
@@ -160,7 +162,7 @@ body{
         border-radius: 0px !important;
         width: 100%;
         a{
-          padding: 0.2em;
+          padding: 0.2em !important;
           color: #001c20 !important;
         }
       }
@@ -186,6 +188,10 @@ body{
     float: left;
     clear: left;
     border: 0 none;
+    button:disabled{
+      cursor: default !important;
+      opacity:0.4 !important;
+    }
   }
 
   .datatable-responsive-demo .p-datatable.p-datatable-responsive-demo .p-datatable-tbody > tr > td .p-column-title {
@@ -199,4 +205,62 @@ body{
   .datatable-responsive-demo .p-datatable.p-datatable-responsive-demo .p-datatable-tbody > tr > td:last-child {
     border-bottom: 1px solid var(--surface-d);
   }
+}
+
+#slider{
+  width:100%;
+  min-height: 300px;
+  background: url('./images/CRM.jpg') no-repeat;
+  background-size: cover;
+  position: relative;
+  &::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #020a28;
+    filter: opacity(0.5);
+    z-index: 0;
+  }
+}
+.sign-in,.sign-up{
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: column;
+  width: 100%;
+  align-items: center;
+  background: #f7f7f7;
+  height: 100vh;
+}
+.sign-in-header {
+  display: flex;
+  height: 50px;
+  width: 100%;
+  background: #353a4e;
+  margin-bottom: 15px;
+  padding: 0.5rem 1rem;
+  color:#fff;
+  justify-content: center;
+  align-items: center;
+}
+.sign-in-content{
+  display:flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items:center;
+  width: 500px;
+  background: #fff;
+  > div{
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    height: 250px;
+    padding: 0px 20px;
+     * {
+       width:100% !important;
+     }
+  }
+
 }
